--- a/front_end/css_flexbox/project-flexbox-dio-master/flex-projeto/style.css
+++ b/front_end/css_flexbox/project-flexbox-dio-master/flex-projeto/style.css
@@ -13,6 +13,7 @@ ul{
 
 ul li a{
     text-decoration: none;
+    color: white;
 
 }
 
@@ -26,6 +27,7 @@ div img{
     max-width: 992px;
     margin: auto;
     width: 100%;
+    min-width: 320px;
 }
 
 header{
@@ -53,7 +55,7 @@ header .menu{
     align-items: center;
     justify-content: space-between;
 }
-.texto-apresentacao{
+.apresentacao .texto-apresentacao{
     min-height: 200px;
 }
 .texto-apresentacao h1{
@@ -62,7 +64,7 @@ header .menu{
     margin-bottom: 10px;
 
 }
-.texto-apresentacao a{
+.btn{
     background-color: #122a57;
     color: white;
     text-align: center;
@@ -81,10 +83,12 @@ header .menu{
     align-items: center;
     justify-content: space-between;     
 }
+
 #quem-somos h2{
     font-size: 32px;
     display: flex;
     color: #122a57;
+    flex-
 
 }
 
@@ -99,4 +103,206 @@ header .menu{
 #quem-somos p{
     margin-bottom: 10px;
     width: 90%;
+}
+
+#quem-somos img{
+    min-width: 420px;
+}
+
+.container-externo{
+    background-color: #122a57;
+    width: 100%;
+}
+
+#servicos{
+    flex-direction: column;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+#servicos h2{
+    color: white;
+    font-size: 32px;
+    padding-bottom: 20px;
+}
+
+.list-servicos{
+    display: flex;
+    justify-content: space-between;
+}
+
+.list-servicos .item-servico{
+    text-align: center;
+}
+
+.item-servico a{
+    width: 120px;
+    background-color: white;
+    border-radius: 30px;
+    height: 50px;
+    margin-top: 20px;
+    line-height: 50px;
+    padding: 5px 10px;
+    color: #122a57;
+    font-size: 12px;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.item-servico p{
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+    margin-top: 20px;
+}
+
+.item-servico img{
+    width: 80%;
+    margin: auto;
+}
+
+#planos{
+ flex-direction: column;
+ min-height: 100px;
+ padding-top: 50px;
+}
+
+#planos h2{
+    font-size: 32px;
+}
+
+.list-planos{
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom: 200px;
+}
+
+.item-plano{
+    flex: 1;
+    border: 2px solid #122a57;
+    margin-right: 20px;
+    padding: 10px;
+    max-width: 240px;
+}
+
+.item-plano .btn{
+    margin: auto;
+    margin-bottom: 20px;
+
+}
+
+.item-plano h3{
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.item-plano h3::after{
+    content: "";
+    background-color: #122a57;
+    width: 100%;
+    height: 3px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.item-plano ul{
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.item-plano ul li{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.item-plano ul li::before{
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #122a57;
+    margin-right: 5px;
+
+}
+
+footer{
+    background-color: #122a57;
+    height: 70px;
+    display: flex;
+    align-items: center;
+}
+
+footer .footer{
+    justify-content: space-between;
+    color: white;
+}
+
+/* mobile */
+
+@media(max-width: 992px){
+    .flex-container{
+        flex-direction: column;
+    }
+    header .menu{
+        align-items: center;
+    }
+
+    header{
+        padding-bottom: 10%;
+    }
+    header ul{
+        flex-direction: column;
+    }
+    
+    header ul li{        
+        border: 1px solid black;
+        padding: 10px 100%;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+        height: auto;
+        align-items: center;    
+    }
+    .apresentacao .texto-apresentacao{
+        width: 100%;
+    }
+
+    #quem-somos{
+        flex-direction: column-reverse;
+    }
+
+    #quem-somos img{
+        min-width: 320px;
+        margin: auto;
+    }
+
+    .list-servicos{
+        flex-direction: column;
+
+    }
+    .item-servico img {
+        width: 50%;
+        margin: auto;
+    }
+
+    .list-planos{
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+
+    .list-itens .item-plano{
+        max-width: 90%;
+        margin: auto;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
 }
