--- a/front_end/css_flexbox/project-flexbox-dio-master/flex-projeto/style.css
+++ b/front_end/css_flexbox/project-flexbox-dio-master/flex-projeto/style.css
@@ -4,20 +4,23 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body,
+html {
+    width: 100%;
+}
+
 ul{
     list-style: none;
     margin: 0;
     padding: 0;
-
 }
 
-ul li a{
+ul li a {
     text-decoration: none;
     color: white;
-
 }
 
-div img{
+img {
     display: block;
     width: 100%;
 }
@@ -27,10 +30,10 @@ div img{
     max-width: 992px;
     margin: auto;
     width: 100%;
-    min-width: 320px;
+    /* min-width: 320px; */
 }
 
-header{
+header {
     background-color: #122a57;
     height: 100px;
     display: flex;
@@ -38,15 +41,21 @@ header{
     color: #fff;
 }
 
-header .list-itens{
+header .list-itens {
     display: flex;
-    max-width: 260px;
-    width: 100%;
     justify-content: space-between;
     align-items: center;
 }
 
-header .menu{
+header .list-itens li {
+    padding: 0 20px 0 0;
+}
+
+header .list-itens li:last-child {
+    padding: 0 0 0 20px;
+}
+
+header .menu {
     justify-content: space-between;
 }
 
@@ -55,15 +64,17 @@ header .menu{
     align-items: center;
     justify-content: space-between;
 }
-.apresentacao .texto-apresentacao{
+
+.apresentacao .texto-apresentacao .texto-apresentacao {
     min-height: 200px;
 }
+
 .texto-apresentacao h1{
     color: #122a57;
     font-size: 48px;
     margin-bottom: 10px;
-
 }
+
 .btn{
     background-color: #122a57;
     color: white;
@@ -88,7 +99,6 @@ header .menu{
     font-size: 32px;
     display: flex;
     color: #122a57;
-
 }
 
 #quem-somos h2::before{
@@ -99,6 +109,7 @@ header .menu{
     background-color: #122a57;
     position: relative;
 }
+
 #quem-somos p{
     margin-bottom: 10px;
     width: 90%;
@@ -161,9 +172,9 @@ header .menu{
 }
 
 #planos{
- flex-direction: column;
- min-height: 100px;
- padding-top: 50px;
+    flex-direction: column;
+    min-height: 100px;
+    padding-top: 50px;
 }
 
 #planos h2{
@@ -227,7 +238,6 @@ header .menu{
     height: 10px;
     background-color: #122a57;
     margin-right: 5px;
-
 }
 
 footer{
@@ -242,76 +252,110 @@ footer .footer{
     color: white;
 }
 
-/* mobile */
+@media(max-width: 992px) {
+    img {
+        min-width: auto !important;
+    }
 
-@media(max-width: 992px){
-
-    .flex-container{
+    .flex-container {
         flex-direction: column;
     }
-    header .menu{
+
+    header .menu {
         align-items: center;
     }
 
-    header{
+    header {
         height: auto;
     }
-    header ul{
+
+    header ul {
         flex-direction: column;
+        margin-top: 15px;
+        width: 100%;
+        align-items: initial !important;
     }
     
-    header ul li{        
-        border: 1px solid #FFF;
-        padding: 5px 992px;
+    header .list-itens li {
+        max-width: none;    
+        border-top: 1px solid #FFF;
+        text-align: center;
+        padding: 5px !important;
     }
 
-   .apresentacao{
+   .apresentacao {
         height: auto;
-        text-align: center;  
-    }
-
-    #quem-somos{
-        flex-direction: column-reverse;
         text-align: center;
     }
 
-    #quem-somos img{
-        min-width: 320px;
+    .apresentacao img {
+        max-width: 500px;
+    }
+
+    #quem-somos {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #quem-somos h2 {
+        width: 100%;
+        justify-content: center;
+    }
+
+    #quem-somos h2::before {
+        display: none;
+    }
+
+    #quem-somos p {
+        text-align: center;
+        padding: 0 30px;
+    }
+
+    #quem-somos img {
+        max-width: 500px;
         margin: auto;
     }
 
-    .list-servicos{
+    .list-servicos {
         flex-direction: column;
-        min-width: 320px;
     }
 
-    #servicos h2{
+    .list-servicos .item-servico:not(:nth-child(3)) {
+        margin-bottom: 50px;
+    }
+
+    #servicos h2 {
         text-align: center;
+        width: 100%;
     }
 
-    .item-servico a{
+    .item-servico a {
         font-size: 22px;
     }
    
-    .item-servico p{
+    .item-servico p {
         font-size: 22px;
     }
 
     .item-servico img {
-        width: 50%;
+        max-width: 200px;
         margin: auto;
+        width: auto;
     }
 
-    .list-planos{
+    #planos h2 {
+        text-align: center;
+        width: 100%;
+    }
+
+    .list-planos {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         margin-bottom: 20px;
+        justify-content: center;
     }
 
-    .list-itens .item-plano{
-        max-width: 90%;
-        margin: auto;
+    .list-planos .item-plano {
         margin-bottom: 20px;
     }
-
 }
